--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: ^8.5.0
+  nem2_sdk_dart:
+    git:
+      url: git://github.com/fajarvm/nem2-sdk-dart.git
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
